test/tests/packages/lets_forward_qualified/forward.txt
error: `$b` is referenced before it is defined
 --> <packages/fwdqpkg/constants.tql>:1:10
  |
1 | let $a = fwdqpkg::$b
  |          ^^^^^^^^^^^ 
  |
